docs/0.18/_sources/api/gammapy.estimators.LightCurveEstimator.rst.txt
LightCurveEstimator
===================

.. currentmodule:: gammapy.estimators

.. autoclass:: LightCurveEstimator
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~LightCurveEstimator.config_parameters
      ~LightCurveEstimator.selection_optional
      ~LightCurveEstimator.tag

   .. rubric:: Methods Summary

   .. autosummary::

      ~LightCurveEstimator.copy
      ~LightCurveEstimator.estimate_time_bin_flux
      ~LightCurveEstimator.get_sqrt_ts
      ~LightCurveEstimator.run

   .. rubric:: Attributes Documentation

   .. autoattribute:: config_parameters
   .. autoattribute:: selection_optional
   .. autoattribute:: tag

   .. rubric:: Methods Documentation

   .. automethod:: copy
   .. automethod:: estimate_time_bin_flux
   .. automethod:: get_sqrt_ts
   .. automethod:: run
