docs/1.2rc1/_sources/api/gammapy.estimators.LightCurveEstimator.rst.txt
LightCurveEstimator
===================

.. currentmodule:: gammapy.estimators

.. autoclass:: LightCurveEstimator
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~LightCurveEstimator.config_parameters
      ~LightCurveEstimator.n_jobs
      ~LightCurveEstimator.norm_max
      ~LightCurveEstimator.norm_min
      ~LightCurveEstimator.norm_n_values
      ~LightCurveEstimator.norm_values
      ~LightCurveEstimator.parallel_backend
      ~LightCurveEstimator.selection_optional
      ~LightCurveEstimator.tag

   .. rubric:: Methods Summary

   .. autosummary::

      ~LightCurveEstimator.copy
      ~LightCurveEstimator.estimate_best_fit
      ~LightCurveEstimator.estimate_counts
      ~LightCurveEstimator.estimate_errn_errp
      ~LightCurveEstimator.estimate_flux_point
      ~LightCurveEstimator.estimate_npred
      ~LightCurveEstimator.estimate_npred_excess
      ~LightCurveEstimator.estimate_scan
      ~LightCurveEstimator.estimate_time_bin_flux
      ~LightCurveEstimator.estimate_ts
      ~LightCurveEstimator.estimate_ul
      ~LightCurveEstimator.expand_map
      ~LightCurveEstimator.get_scale_model
      ~LightCurveEstimator.run

   .. rubric:: Attributes Documentation

   .. autoattribute:: config_parameters
   .. autoattribute:: n_jobs
   .. autoattribute:: norm_max
   .. autoattribute:: norm_min
   .. autoattribute:: norm_n_values
   .. autoattribute:: norm_values
   .. autoattribute:: parallel_backend
   .. autoattribute:: selection_optional
   .. autoattribute:: tag

   .. rubric:: Methods Documentation

   .. automethod:: copy
   .. automethod:: estimate_best_fit
   .. automethod:: estimate_counts
   .. automethod:: estimate_errn_errp
   .. automethod:: estimate_flux_point
   .. automethod:: estimate_npred
   .. automethod:: estimate_npred_excess
   .. automethod:: estimate_scan
   .. automethod:: estimate_time_bin_flux
   .. automethod:: estimate_ts
   .. automethod:: estimate_ul
   .. automethod:: expand_map
   .. automethod:: get_scale_model
   .. automethod:: run
